[gd_scene load_steps=2 format=3 uid="uid://bye5863yp4apk"]

[ext_resource type="Script" uid="uid://8lk1pw0vmtmc" path="res://level_save.gd" id="1_7ph4j"]

[node name="level_save" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_7ph4j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -145.5
offset_right = 319.0
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "CHOOSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Health" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Health"

[node name="Speed" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Speed"

[node name="Damage" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Damage"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Health" to="." method="_on_health_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Speed" to="." method="_on_speed_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Damage" to="." method="_on_damage_pressed"]
